Bug 422564 - Mismatch text between "Alkalie Metal" and "Alkaline earth metals"
Summary: Mismatch text between "Alkalie Metal" and "Alkaline earth metals"
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR major
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-07 03:48 UTC by Boyuan Yang
Modified: 2025-11-07 13:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Boyuan Yang 2020-06-07 03:48:25 UTC
SUMMARY

According to https://github.com/KDE/kalzium/blob/a147c68a4eb8bbeebe286b77dec15e4e1375049f/src/elementdataviewer.cpp#L451 , there are "Alkalie Metal" and "Alkaline earth metals". The former one should contain elements such as Li, Na, K and Rb. The latter one should contain elements such as Be, Mg, Ca and Sr.

However, in https://github.com/KDE/kalzium/blob/b8060ea167325609425587331d05d39959ba9d97/src/kalziumschemetype.cpp#L298-L301 , the source code matched Prefs::alkalie() with translatable string "Alkaline" as well as Prefs::alkaline() with translatable string "Alkalie Metal". I'm not sure if that is a typo (it should be).

This mismatch will also caused great confusion to the translators.



STEPS TO REPRODUCE
1. View the source code above.



OBSERVED RESULT

Pref::alkalie() matches with "Alkaline";
Pref::alkaline() matches with "Alkalie Metal";


EXPECTED RESULT

Pref::alkalie() matches with "Alkalie Metal";
Pref::alkaline() matches with "Alkaline Earch Metal";


SOFTWARE/OS VERSIONS

Any Kalzium release, no later than v2.5.0.
Any OS.


ADDITIONAL INFORMATION

N/A
Comment 1 Bug Janitor Service 2025-11-01 13:33:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/kalzium/-/merge_requests/64
Comment 2 Albert Astals Cid 2025-11-07 13:32:59 UTC
Git commit cb8945b0034733b3642e98b4601d85955da7bb40 by Albert Astals Cid, on behalf of Leon Halic.
Committed on 07/11/2025 at 13:32.
Pushed by aacid into branch 'master'.

Fixed the legend for the Family scheme

Alkaline and Alkali metals were swaped in the legend. The colors were not matching the text. They are now a correct color. It was a simple typo in the  `KalziumFamilySchemeType::legendItems()`.

M  +5    -4    src/kalziumschemetype.cpp
M  +1    -1    src/plotsetupwidget.ui
M  +2    -2    src/settings/kalzium.kcfg
M  +2    -2    src/settings/settings_colors.ui

https://invent.kde.org/education/kalzium/-/commit/cb8945b0034733b3642e98b4601d85955da7bb40
Comment 3 Albert Astals Cid 2025-11-07 13:51:16 UTC
Git commit 14f8ff2c2afe567fdf372285bc2f87c7fd657812 by Albert Astals Cid, on behalf of Leon Halic.
Committed on 07/11/2025 at 13:50.
Pushed by aacid into branch 'release/25.12'.

Fixed the legend for the Family scheme

Alkaline and Alkali metals were swaped in the legend. The colors were not matching the text. They are now a correct color. It was a simple typo in the  `KalziumFamilySchemeType::legendItems()`.
(cherry picked from commit cb8945b0034733b3642e98b4601d85955da7bb40)

M  +5    -4    src/kalziumschemetype.cpp
M  +1    -1    src/plotsetupwidget.ui
M  +2    -2    src/settings/kalzium.kcfg
M  +2    -2    src/settings/settings_colors.ui

https://invent.kde.org/education/kalzium/-/commit/14f8ff2c2afe567fdf372285bc2f87c7fd657812