Fixed the legend for the Family scheme

Alkaline and Alkali metals were swaped in the legend. The colors were not matching the text. They are now a correct color. It was a simple typo in the  `KalziumFamilySchemeType::legendItems()`.

BUG: 422564